# TDs

data-discovery-mcp/: .gitignore  README.md  pyproject.toml  sources.json
data-discovery-mcp/discovery/: __init__.py  cli.py  config.py  mcp_server.py
data-discovery-mcp/discovery/connectors/: __init__.py  base.py  csv_connector.py  sqlite_connector.py
data-discovery-mcp/discovery/index/: __init__.py  indexer.py  store.py
data-discovery-mcp/discovery/search/: __init__.py  service.py
data-discovery-mcp/sample_data/: demo.db  orders.csv  users.csv
data-discovery-mcp/tests/: test_config.py  test_csv_connector.py  test_search.py  test_sqlite_connector.py
