[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-discovery-mcp"
version = "0.1.0"
description = "A small keyword-based data discovery service exposed through MCP tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["discovery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
